--- a/styles/template.css
+++ b/styles/template.css
@@ -127,7 +127,7 @@ ol li {
 #main,
 #logo,
 #menubar,
-#site_content,
+#site-content,
 #footer {
   margin-left: auto;
   margin-right: auto;
@@ -243,7 +243,7 @@ ul#menu li a:hover {
   color: #323232;
 }
 
-#site_content {
+#site-content {
   width: 880px;
   overflow: hidden;
   margin: 20px auto 0 auto;
